Modificação do b.html pelo A

--- a/b.html
+++ b/b.html
@@ -7,6 +7,6 @@
     <title>b.html</title>
 </head>
 <body>
-    <h1>Este é um arquivo B.html</A></h1>
+    <h1>mensagem aleatória</A></h1>
 </body>
 </html>
